# gplay-scraper

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
README/: APP_METHODS.md  DEVELOPER_METHODS.md  LIST_METHODS.md  README.md  REVIEWS_METHODS.md  SEARCH_METHODS.md  SIMILAR_METHODS.md  SUGGEST_METHODS.md
docs/: api_reference.md  changelog.md  configuration.md  contributing.md  examples.md  fields_reference.md  http_client.md  index.md  installation.md  license.md  quickstart.md
examples/: README.md  app_methods_example.py  developer_methods_example.py  list_methods_example.py  reviews_methods_example.py  search_methods_example.py  similar_methods_example.py  suggest_methods_example.py
gplay_scraper/: __init__.py  app.py  config.py  exceptions.py
gplay_scraper/core/: gplay_methods.py  gplay_parser.py  gplay_scraper.py
gplay_scraper/models/: element_specs.py
gplay_scraper/utils/: __init__.py  http_client.py
output/: app_example.json  developer_example.json  list_example.json  reviews_example.json  search_example.json  similar_example.json  suggest_example.json
tests/: test_app_methods.py  test_basic.py  test_developer_methods.py  test_list_methods.py  test_package.py  test_reviews_methods.py  test_search_methods.py  test_similar_methods.py  test_suggest_methods.py
